# streamly-lz4

./: .gitignore  .packcheck.ignore  CHANGELOG.md  LICENSE  NOTICE  README.md  appveyor.yml  cabal.project  cabal.project.Werror  decomp.hs  default.nix  download-corpora.sh  shell.nix  stack.yaml  streamly-lz4.cabal
.github/workflows/: haskell.yml
benchmark/: Main.hs
src/Streamly/: LZ4.hs
src/Streamly/Compression/: LZ4.hsc
src/Streamly/Internal/: LZ4.hs  LZ4.hsc
src/Streamly/Internal/LZ4/: Config.hs  Frame.hs
test/: Main.hs
