cabal-version:       2.2
name:                streamly-lz4
version:             0.1.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
homepage:            https://github.com/composewell/streamly-lz4
bug-reports:         https://github.com/composewell/streamly-lz4/issues
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies
category:            Codec, Compression, Streamly
build-type:          Simple

extra-source-files:  CHANGELOG.md
                   , NOTICE

source-repository head
  type: git
  location: https://github.com/composewell/streamly-lz4

library
  hs-source-dirs:      src
  exposed-modules:     Streamly.Compression.LZ4
  build-depends:       base >=4.13 && <4.14
  ghc-options:         -Wall
  default-language:    Haskell2010
