cabal-version:       2.2
name:                streamly-lz4
version:             0.1.0
synopsis:            Streamly combinators for LZ4 compression
license:             Apache-2.0
license-file:        LICENSE
homepage:            https://github.com/composewell/streamly-lz4
bug-reports:         https://github.com/composewell/streamly-lz4/issues
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2020 Composewell Technologies
category:            Codec, Compression, Streamly
build-type:          Simple

extra-source-files:  CHANGELOG.md
                   , .gitignore
                   , NOTICE
                   , README.md
                   , cabal.project
                   , stack.yaml
                   , .github/workflows/haskell.yml
                   , appveyor.yml
                   , default.nix
                   , download-corpora.sh

source-repository head
  type: git
  location: https://github.com/composewell/streamly-lz4

common optimization-options
  ghc-options: -O2
               -fdicts-strict
               -fspec-constr-recursive=16
               -fmax-worker-args=16


common exe-options
  import: optimization-options
  ghc-options: -fplugin Fusion.Plugin
  build-depends:
    fusion-plugin >= 0.2 && < 0.3


library
  import:              optimization-options
  hs-source-dirs:      src
  include-dirs:        c
  c-sources:           c/lz4.c, c/lz4.h
  exposed-modules:     Streamly.LZ4
                     , Streamly.Internal.LZ4
  build-depends:       base                >= 4.13 && < 4.14
                     , fusion-plugin-types >= 0.1  && < 0.2
                     , streamly
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  CPP
                     , EmptyDataDecls
                     , ForeignFunctionInterface

test-suite test-lz4
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       streamly-lz4
                     , streamly
                     , base       >= 4.13   && <4.14
                     , QuickCheck >= 2.13.1 && < 2.14
                     , hspec      >= 2.7    && < 2.8
                     , directory  >= 1.3.6  && < 1.3.7
  ghc-options:         -Wall
  default-language:    Haskell2010

benchmark bench-lz4
  import:              exe-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       streamly-lz4
                     , streamly
                     , base          >= 4.13   && < 4.14
                     , gauge         >= 0.2.5  && < 0.2.6
                     , directory     >= 1.3.6  && < 1.3.7
  ghc-options:         -Wall
  default-language:    Haskell2010
